@startuml

title __STATES's Class Diagram__\n

  namespace PaooGame {
    namespace States {
      class PaooGame.States.AboutState {
          - buttonArray : String[]
          - buttonCounter : int
          - buttons : int
          - font : Font
          + AboutState()
          + Draw()
          + Update()
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      class PaooGame.States.MenuState {
          - buttonArray : String[]
          - buttonCounter : int
          - buttons : int
          - font : Font
          + Draw()
          + MenuState()
          + Update()
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      class PaooGame.States.PlayState {
          # font : Font
          - enemyDamage : int
          - gameOverTicks : int
          - healthbar : int
          - killScore : int
          - monsters : ArrayList<Character>
          - score : int
          - victoryTicks : int
          + Draw()
          + PlayState()
          + SetEasyDifficulty()
          + SetHardDifficulty()
          + Update()
          - CheckAttackCollisions()
          - CheckCollisions()
          - Victory()
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      class PaooGame.States.SettingsState {
          # font : Font
          - buttonArray : String[]
          - buttonCounter : int
          - buttons : int
          + Draw()
          + SettingsState()
          + Update()
      }
    }
  }
  

  namespace PaooGame {
    namespace States {
      abstract class PaooGame.States.State {
          {static} - currentState : State
          {static} - previousState : State
          {abstract} + Draw()
          {static} + GetState()
          {static} + SetState()
          + State()
          {abstract} + Update()
      }
    }
  }
  

  PaooGame.States.AboutState -up-|> PaooGame.States.State
  PaooGame.States.MenuState -up-|> PaooGame.States.State
  PaooGame.States.PlayState -up-|> PaooGame.States.State
  PaooGame.States.PlayState o-- PaooGame.Items.Character : hero
  PaooGame.States.PlayState o-- PaooGame.Maps.Map : map
  PaooGame.States.SettingsState -up-|> PaooGame.States.State
  PaooGame.States.State o-- PaooGame.RefLinks : refLink


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
